[BACKEND-SEARCH-FIX]: Fix YouTube search metadata with EnrichedSearchResult DTO
Backend changes:
- Created EnrichedSearchResult DTO for proper JSON serialization
- Added enrichment methods for channels, playlists, and videos
- Fetch statistics/contentDetails via separate YouTube API calls
- Return accurate subscriber counts, view counts, item counts, duration, and publishedAt

Frontend changes:
- Updated youtubeService to handle EnrichedSearchResult structure
- Support both enriched and legacy Google API formats
- Extract metadata directly from result fields instead of nested objects

This fixes the critical issue where no accurate counts or published dates were displaying.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>